--- a/Auto Order/src/styles.css
+++ b/Auto Order/src/styles.css
@@ -352,3 +352,41 @@ form {
   margin: 0 auto;
   padding: 20px;
 }
+
+
+body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+
+    .custom-container {
+      width: 80%;
+      margin: 20px auto;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    .custom-form-group {
+      text-align: left;
+    }
+
+    .custom-heading {
+      color: #3498db;
+      font-size: 24px;
+    }
+
+    .custom-list {
+      list-style-type: decimal;
+      margin: 0;
+      padding: 0;
+    }
+
+    .custom-list-item {
+      margin-bottom: 10px;
+      color: #555;
+      font-size: 16px;
+    }
